Backport test fix for invalid digest (#33558)